--- a/source/sass/blocks/booking.scss
+++ b/source/sass/blocks/booking.scss
@@ -38,6 +38,7 @@
     line-height: 140%;
     text-align: center;
     @media (min-width: 769px) {
+      margin: 0;
       margin-bottom: 60px;
       font-size: 18px;
       line-height: 150%;
