--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -4,14 +4,31 @@
   &__container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
+    flex-direction: column;
+    justify-content: flex-start;
 
+    @media (min-width: $tablet) {
+      align-items: center;
+      flex-direction: row;
+      justify-content: space-between;
+    }
   }
   &__logo {
-    margin-right: 40px;
+    margin-right: 25px;
+
+    @media (min-width: $desktop) {
+      margin-right: 40px;
+    }
+  }
+  &__nav {
+    margin-bottom: 20px;
+    @media (min-width: $tablet) {
+      margin-bottom: 0;
+    }
   }
   &__social {
-    margin-left: auto;
+    @media (min-width: $tablet) {
+      margin-left: auto;
+    }
   }
 }
