--- a/source/sass/blocks/booking.scss
+++ b/source/sass/blocks/booking.scss
@@ -21,11 +21,11 @@
     line-height: 130%;
     text-align: center;
 
-    @media (min-width: 769px) {
+    @media (min-width: $tablet) {
       font-size: 34px;
       line-height: 150%;
     }
-    @media (min-width: 1023px) {
+    @media (min-width: $desktop) {
       font-size: 40px;
       line-height: 150%;
       text-align: left;
@@ -37,13 +37,13 @@
     font-size: 16px;
     line-height: 140%;
     text-align: center;
-    @media (min-width: 769px) {
+    @media (min-width: $tablet) {
       margin: 0;
       margin-bottom: 60px;
       font-size: 18px;
       line-height: 150%;
     }
-    @media (min-width: 1023px) {
+    @media (min-width: $desktop) {
       text-align: left;
     }
   }
@@ -51,7 +51,7 @@
     width: 100%;
     margin: 0 auto;
     
-    @media (min-width: 769px) {
+    @media (min-width: $tablet) {
       width: 50%;
     }
   }
@@ -59,7 +59,7 @@
   &__form {
     margin: 0 auto;
     width: 100%;
-    @media (min-width: 769px) {
+    @media (min-width: $tablet) {
       width: 50%;
     }
   }
