--- a/source/sass/blocks/container.scss
+++ b/source/sass/blocks/container.scss
@@ -5,10 +5,10 @@
   padding: 0 15px;
   box-sizing: border-box;
 
-  @media (min-width: 425px) {
+  @media (min-width: $tablet) {
     padding: 0 45px;
   }
-  @media (min-width: 769px) {
+  @media (min-width: $desktop) {
     padding: 0 103px;
   }
 }
