--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -7,7 +7,7 @@
   display: flex;
   flex-direction: column;
 
-  @media (min-width: 769px) {
+  @media (min-width: $tablet) {
     padding: 50px;
   }
 
