--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -5,7 +5,11 @@
   left: 0;
   width: 100%;
   max-width: 100%;
-  padding: 35px 0;
+  padding: 20px 0;
+
+  @media (min-width: $tablet) {
+    padding: 35px 0;
+  }
 
   &__container {
     display: flex;
