--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -1,7 +1,7 @@
 // Глобальные переменные
 // Font
-$mainFont: "Montserrat", sans-serif;
-$mainFontBold: "Montserrat Bold", sans-serif;
+$mainFont: "Montserrat", "Arial", sans-serif;;
+$mainFontBold: "Montserrat Bold", "Arial", sans-serif;;
 // Size
 $mainFontSize: 16px;
 $mainLineHeight: 24px;
@@ -15,3 +15,5 @@ $section-pd: 65px;
 $section-pd-sm: 100px;
 $section-pd-md: 120px;
 
+$tablet: 768px;
+$desktop: 1024px;
