--- a/source/sass/blocks/advantage.scss
+++ b/source/sass/blocks/advantage.scss
@@ -23,11 +23,14 @@
     list-style: none;
   }
   &__item {
-    margin-bottom: 30px;
     padding: 25px 20px;
     background-color: #f9fbfd;
     width: auto;
     box-sizing: border-box;
+
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
     @media (min-width: 767px) {
       width: calc(100% / 3 - 25px);
     }
