--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -1,7 +1,7 @@
 // Глобальные переменные
 // Font
-$mainFont: "Montserrat", "Arial", sans-serif;;
-$mainFontBold: "Montserrat Bold", "Arial", sans-serif;;
+$mainFont: "Montserrat", "Arial", sans-serif;
+$mainFontBold: "Montserrat Bold", "Arial", sans-serif;
 // Size
 $mainFontSize: 16px;
 $mainLineHeight: 24px;
