--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -5,7 +5,7 @@
     padding: $section-pd-sm 0;
   }
   @media (min-width: $desktop) {
-    padding: $section-pd-md 0;
+    padding: 118px 0;
   }
 
   &__container {
@@ -16,18 +16,40 @@
 
   &__item {
     width: auto;
-
-    @media (min-width: $tablet) {
+    @media (min-width: 767px) {
       width: 50%;
+    }
+
+    & img {
+      max-width: 100%;
+      width: 100%;
+      height: auto;
+      object-fit: cover;
+      box-sizing: border-box;
+
+      @media (min-width: $tablet) {
+        padding: 0 0 0 20px;
+        width: 100%;
+      }
     }
   }
 
   &__text {
-    @media (min-width: $desktop) {
-      padding: 44px 88px 0 0;
+    @media (min-width: 520px) {
+      padding-right: 45px;
     }
-  }
-  &__title {
-    margin-bottom: 40px;
+    @media (min-width: $desktop) {
+      padding: 64px 64px 0 0;
+    }
+
+    & h2 {
+      margin-bottom: 35px;
+    }
+
+    & p {
+      margin: 0;
+      margin-bottom: 35px;
+    }
+    
   }
 }
