--- a/source/sass/blocks/advantage.scss
+++ b/source/sass/blocks/advantage.scss
@@ -1,17 +1,36 @@
 .advantage {
   padding: $section-pd 0;
 
-  background-image: url("../img/advantage/advantage.jpg");
+  background-image: url("../img/advantage/advantage-mob.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   background-color: #dde9f5;
+
+  @media (min-width: 768px) {
+    background-image: url("../img/advantage/advantage-tablet.jpg");
+  }
+  @media (min-width: $desktop) {
+    background-image: url("../img/advantage/advantage.jpg");
+  }
+
+  @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+    background-image: url("../img/advantage/advantage@2x.jpg");
+  }
 
   @media (min-width: $tablet) {
     padding: $section-pd-sm 0;
   }
   @media (min-width: $desktop) {
     padding: $section-pd-md 0;
+  }
+  &__container {
+    @media (min-width: 600px) {
+      padding: 0 45px;
+    }
+    @media (min-width: $desktop) {
+      padding: 0 103px;
+    }
   }
   &__list {
     display: flex;
@@ -23,25 +42,50 @@
     list-style: none;
   }
   &__item {
-    padding: 25px 20px;
+    flex-grow: 1;
+    padding: 25px;
     background-color: #f9fbfd;
     width: auto;
     box-sizing: border-box;
 
     &:not(:last-child) {
-      margin-bottom: 30px;
+      margin-right: 25px;
     }
-    @media (min-width: 767px) {
+
+    @media (max-width: 754px) {
+      &:not(:last-child) {
+        margin-bottom: 30px;
+        margin-right: 0;
+      }
+    }
+
+    @media (min-width: 755px) {
       width: calc(100% / 3 - 25px);
     }
+    @media (min-width: $tablet) {
+      padding: 30px;
+    }
+    @media (min-width: $desktop) {
+      padding: 30px 35px;
+    }
+
+    & h3 {
+      margin: 0;
+      margin-bottom: 10px;
+      font-weight: 500;
+      font-size: 18px;
+      line-height: 150%;
+    }
+
+    & p {
+      padding-right: 15px;
+      margin: 0;
+      font-size: 14px;
+      line-height: 140%;
+    }
   }
-  &__name {
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 150%;
-  }
-  &__text {
-    font-size: 14px;
-    line-height: 140%;
+  &__icon {
+    height: 32px;
+    margin-bottom: 10px;
   }
 }
