--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -1,5 +1,4 @@
 .form {
-  max-width: 403px;
   margin: 0 auto;
   padding: 40px 30px;
   background-color: $primary-color;
@@ -8,11 +7,11 @@
   flex-direction: column;
 
   @media (min-width: $tablet) {
-    padding: 50px;
+    padding: 45px 48px 50px;
   }
 
   &__title {
-    margin-bottom: 20px;
+    margin-bottom: 25px;
     font-weight: 500;
     font-size: 18px;
     line-height: 150%;
@@ -21,7 +20,7 @@
 
   &__val {
     margin-bottom: 20px;
-    padding: 16px;
+    padding: 11px 20px;
     font-size: 14px;
     line-height: 150%;
     border: none;
@@ -31,20 +30,70 @@
   &__button {
     display: inline-block;
     vertical-align: middle;
-    padding: 15px;
+    padding: 11px;
     font-weight: 600;
     font-size: 14px;
     line-height: 150%;
     border: none;
     border-radius: 0;
     color: $primary-color;
+    background-color: $default-color;
     cursor: pointer;
+
+    &:focus,
+    &:hover {
+      opacity: 0.5
+    }
   }
 
   &__label {
-    margin-bottom: 20px;
+    margin-bottom: 30px;
     color: $default-color;
     font-size: 10px;
     line-height: 130%;
   }
+}
+.form__val[type="checkbox"]:not(:checked),
+.form__val[type="checkbox"]:checked {
+  position: absolute;
+  left: -9999px;
+}
+.form__val[type="checkbox"]:not(:checked) + label,
+.form__val[type="checkbox"]:checked + label {
+  position: relative;
+  padding-left: 1.95em;
+  cursor: pointer;
+}
+
+/* checkbox aspect */
+.form__val[type="checkbox"]:not(:checked) + label:before,
+.form__val[type="checkbox"]:checked + label:before {
+  content: '';
+  position: absolute;
+  left: 0; top: 0;
+  width: 1.25em; height: 1.25em;
+  border: 2px solid #101A56;
+  background: $default-color;
+  border-radius: 0;
+  box-shadow: inset 0 1px 3px rgba(0,0,0,.1);
+}
+/* checked mark aspect */
+.form__val[type="checkbox"]:not(:checked) + label:after,
+.form__val[type="checkbox"]:checked + label:after {
+  content: '\2713\0020';
+  position: absolute;
+  top: .15em; left: .22em;
+  font-size: 1.6em;
+  line-height: 0.8;
+  color: $primary-color;
+  transition: all .2s;
+}
+/* checked mark aspect changes */
+.form__val[type="checkbox"]:not(:checked) + label:after {
+  opacity: 0;
+  transform: scale(0);
+}
+.form__val[type="checkbox"]:checked + label:after {
+  opacity: 1;
+  transform: scale(1);
 }
