--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -2,10 +2,10 @@
   padding: 60px 0 50px;
 
   @media (min-width: $tablet) {
-    padding: $section-pd-sm 0;
+    padding: $section-pd-sm 0 75px;
   }
   @media (min-width: $desktop) {
-    padding: $section-pd-md 0 113px;
+    padding: $section-pd-md 0 107px;
   }
   &__container {
     display: flex;
@@ -36,11 +36,12 @@
 
     @media (min-width: $tablet) {
       width: 50%;
-      padding-left: 30px;
+      padding-left: 13px;
       padding-top: 10px;
     }
     @media (min-width: $desktop) {
-      padding-left: 80px;
+      padding-left: 82px;
+      padding-top: 25px;
     }
   }
   & p {
@@ -58,6 +59,12 @@
   &__item {
     &:not(:last-child) {
       margin-bottom: 18px;
+    }
+
+    @media (min-width: $desktop) {
+      &:not(:last-child) {
+        margin-bottom: 25px;
+      }
     }
   }
   &__link {
