--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -13,12 +13,15 @@
         margin-right: 23px;
       }
       @media (min-width: $desktop) {
-        margin-right: 33px;
+        margin-right: 25px;
       }
     }
 
     & svg {
       height: 16px;
+      @media (min-width: $desktop) {
+        height: 20px;
+      }
     }
   }
 }
