--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -76,3 +76,12 @@
     }
   }
 }
+
+@supports (display: flex) {
+  .promo {
+    display: flex;
+    flex-wrap: wrap;
+
+    align-items: center;
+  }
+}
