--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,20 +1,19 @@
-@import 'variables.scss';
-@import 'fonts.scss';
-@import 'base.scss';
-@import 'utils.scss';
+@import "variables.scss";
+@import "fonts.scss";
+@import "base.scss";
+@import "utils.scss";
 
-@import 'blocks/container.scss';
-@import 'blocks/page-header.scss';
-@import 'blocks/logo.scss';
-@import 'blocks/title.scss';
-@import 'blocks/navigation.scss';
-@import 'blocks/promo.scss';
-@import 'blocks/about.scss';
-@import 'blocks/advantage.scss';
-@import 'blocks/nearest-cruises.scss';
-@import 'blocks/cruise.scss';
-@import 'blocks/booking.scss';
-@import 'blocks/contacts.scss';
-@import 'blocks/social.scss';
-@import 'blocks/form.scss';
-@import 'blocks/page-footer.scss';
+@import "blocks/container.scss";
+@import "blocks/page-header.scss";
+@import "blocks/logo.scss";
+@import "blocks/navigation.scss";
+@import "blocks/promo.scss";
+@import "blocks/about.scss";
+@import "blocks/advantage.scss";
+@import "blocks/nearest-cruises.scss";
+@import "blocks/cruise.scss";
+@import "blocks/booking.scss";
+@import "blocks/contacts.scss";
+@import "blocks/social.scss";
+@import "blocks/form.scss";
+@import "blocks/page-footer.scss";
